--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+aniso8601==9.0.1
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 dj-database-url==1.0.0
 Django==4.1.2
+django-filter==22.1
 djangorestframework==3.14.0
+graphene==3.1.1
+graphene-django==3.0.0
+graphql-core==3.2.3
+graphql-relay==3.2.0
 gunicorn==20.1.0
+promise==2.3
 psycopg2-binary==2.9.4
 pytz==2022.4
+six==1.16.0
 sqlparse==0.4.3
+text-unidecode==1.3
 tzdata==2022.4
